--- a/CSEvaluation.tex
+++ b/CSEvaluation.tex
@@ -134,7 +134,7 @@ of a text file according to a provided command string, could be provided
 a symbolic link, a directory, or a character device
 instead.  CrashSimulator accomplishes this by identifying the calls to {\tt
   stat()}, {\tt fstat()}, or {\tt lstat()} that an application makes to examine
-the file and then changes to the trace to simulate that the regular file {\tt sed}
+the file and then changes the trace to simulate that the regular file {\tt sed}
 is expecting is actually one of the special file types.  If the application
 responds to this injected information then there is the possibility that the
 special file is being handled correctly.  If the application does not alter its
@@ -518,7 +518,7 @@ character file like {\tt /dev/urandom} across disks.  As was discussed in the
 previous section, many applications fail to examine the nature of a file before
 operating on it.  So the file must be moved by creating a new device of the same
 type at the destination, instead of reading from a potentially infinite device.
-In our experience, applications that fail to perform this check end up can
+In our experience, applications that fail to perform this check end up
 completely filling a disk or exhausting available memory -- sometimes causing the
 system to become unresponsive.
 
@@ -587,19 +587,21 @@ cases.
 \subsection{What types of bugs cannot be found using CrashSimulator?}
 \label{sec-not-found}
 
-Due to the level at which CrashSimulator works (the system call level), it is
-not possible to find certain types of bugs.  CrashSimulator is not able to
-detect bugs that do not result from or have a visible effect on the system calls
-an application makes.  An example of this situation 
-is applications mishandling a situation around file moves where the
-where, due to a strange volume mounting arrangement, the source directory is
-moved into itself.  In order to detect this situation the application must make
-an effort to gather the full path of both the source and destination and compare
-them.  While CrashSimulator is able to observe some aspects of the ``gathering''
-process (i.e. the {\tt stat()} or {\tt lstat()} calls) it is not able to observe
-whether the application compares the strings.  
-CrashSimulator must see the correct actions via system calls (or incorrect
-actions through the lack of them) to understand application behavior.
+Due to the level at which CrashSimulator works (the system call
+level), it is not possible to find certain types of bugs.
+CrashSimulator is not able to detect bugs that do not result from or
+have a visible effect on the system calls an application makes.  An
+example of this situation is applications mishandling a situation
+around file moves where, due to a strange volume mounting arrangement,
+the source directory is moved into itself.  In order to detect this
+situation the application must make an effort to gather the full path
+of both the source and destination and compare them.  While
+CrashSimulator is able to observe some aspects of the ``gathering''
+process (i.e. the {\tt stat()} or {\tt lstat()} calls) it is not able
+to observe whether the application compares the strings.
+CrashSimulator must see the correct actions via system calls (or
+incorrect actions through the lack of them) to understand application
+behavior.
 
 %\emph{CrashSimulator could
 %  detect this issue during a specially crafted execution which replays a trace
