--- a/CSEvaluation.tex
+++ b/CSEvaluation.tex
@@ -108,7 +108,9 @@ that used common API calls and thus had the potential to appear in
 many programs.  We ran CrashSimulator on applications from GNU Coreutils and
 on popular projects as is indicated by Debian's Popularity Contest~\cite{DebPopCon}.
 
-\subsubsection{Unexpected File Types} Providing unexpected types of files to
+\subsubsection{Unexpected File Types} 
+\label{sec-file-type-bugs}
+Providing unexpected types of files to
 applications.
 
 The first anomaly investigated occurs when an
