--- a/CSApproachDetails.tex
+++ b/CSApproachDetails.tex
@@ -124,6 +124,31 @@
     described by finite automata, allowing CrashSimulator to simply check
     whether replay results are accepted by the automaton.
 
+    \preston{Much like the effort involved in constructing a unit test that
+      checks for the presence of correct behavior in a piece of code, this
+      process involves some amount of user skill and effort initially with the
+      idea that this effort will be paid back as its products are used
+      repeatedly in over time.  Consider a Linux application that depends on a
+      particular file being present at a specific location in the filesystem.
+      If this file is usually present, a developer may forget to check the
+      return value of {\tt open ()} on it.  This will result in future calls to
+      {\tt write ()} the file failing returning -1 with {\tt errno} containing {\tt
+        EBADF} --- a result that obscures the initial cause of the failure.  The
+      key pieces of information that CrashSimulator's user must extract from
+      this situation are the true cause of the error (i.e.\ the initial open ()
+      failure) and the system call specific traits of the error (i.e.\ open ()
+      returning -1 rather than a valid file descriptor, and {\tt errno} containing
+      {\tt ENOENT}).  In come cases this step can be automated (consider NetCheck
+      automatically diagnosing some classes of network-related errors) but in
+      other cases manual effort will be required.}
+
+      \preston{With this information in mind, a developer can construct the simple
+      mutation ``make the {\tt open ()} call return -1 with {\tt errno} set to
+      {\tt ENOENT}'' and use CrashSimulator to apply it to any application that
+      makes {\tt open ()} calls.  In this way, the mutation can allow
+      CrashSimulator to perform a universal test for whether or not an
+      application correctly checks {\tt open ()}'s return value.}
+
     %CrashSimulator can use the outputs of this analysis either as mutations to
     %be applied to a system call trace of the application under test or as input
     %to a ``checker'' that determines whether an application has performed a
