Add bug count to abstract

--- a/CSAbstract.tex
+++ b/CSAbstract.tex
@@ -15,7 +15,7 @@
   application against a series of these test cases, CrashSimulator shows an
   application's developer how the application would respond were
   it executed in the environment from which the test cases were
-  generated. CrashSimulator was able to identify bugs resulting from anomalous
+  generated. CrashSimulator was able to identify 84 bugs resulting from anomalous
   filesystem and network conditions in 30 popular applications. The damage
   caused by these bugs ranges from application hangs to data loss and remote
   denial of service conditions. While one of the bugs we found was independently
