Aircraft rather than automobile analogy

--- a/CSIntro.tex
+++ b/CSIntro.tex
@@ -90,11 +90,11 @@ following observation: {\em Insight gleaned from a fault that is
   of its deployment environments, can be leveraged to discover related
   faults in a {\em wide range} of applications that may run in that
   environment.}  The approach is loosely inspired by simulation
-environments used in the automotive industry. Discovery that one model
-of car is prone to behave poorly under certain environmental
-conditions (e.g. side impact collision, roll over, etc) leads to
-testing many other car models in simulators that model relevant
-aspects of the environment. While there are other testing techniques
+environments provided by flight simulators. Discovery that one model
+of aircraft is prone to behave poorly under certain environmental
+conditions (e.g.\ windy conditions, rain, etc) leads to
+testing many other aircraft models in simulators that model relevant
+aspects of the problematic environment. While there are other testing techniques
 that follow a similar approach~\cite{mariani2007compatibility,
   DBLP:journals/ase/WasylkowskiZ11, DBLP:conf/icse/PradelJAG12,
   DBLP:journals/tosem/MonperrusM13,
