--- a/CSApproachDetails.tex
+++ b/CSApproachDetails.tex
@@ -22,7 +22,7 @@
 
         Operating at the system call level allows this work to take advantage of
         two key pieces of tooling that already exist in mature form on Linux.
-        The first is {\tt ptrace}. {\tt Ptrace} is a process manipulation interface provided
+        The first is {\tt ptrace}. {\tt ptrace} is a process manipulation interface provided
         by the Linux kernel whose primary use case is debugger development.
         This work leverages {\tt ptrace} in order to start and stop execution of a
         process as well as read and write the contents of the processe's
