--- a/CSEvaluation.tex
+++ b/CSEvaluation.tex
@@ -76,7 +76,7 @@ Using this prototype, we answer the following questions about CrashSimulator:
 %multi-processing.  Is due to two factors.  First, the replay tool must be able to force some pre-determined
 %order onto the threads or processes in order to prevent situations where the execution portion of a replay ends
 %up requesting system calls in a different order than was recorded in the system call trace the system is
-%attempting to replay.  Second, the tool needs to be able to correctly monitor multiple processes. {\tt Ptrace}
+%attempting to replay.  Second, the tool needs to be able to correctly monitor multiple processes. {\tt ptrace}
 %may have appropriate facilities for this task but they were not explored for this version of the tool.
 %
 %\paragraph{Multi-Platform Tracing Tool}
