--- a/CrashSimulator.tex
+++ b/CrashSimulator.tex
@@ -362,7 +362,8 @@
 %
 % paper title
 % can use linebreaks \\ within to get better formatting as desired
-\title{CrashSimulator: Identifying Environment Induced Faults Through System Call Trace Analysis, Mutation, and Replay}
+%\title{CrashSimulator: Identifying Environment Induced Faults Through System Call Trace Analysis, Mutation, and Replay}
+\title{Know Before You Go: CrashSimulator Finds Real-World Faults Before Deployment}
 
 
 % author names and affiliations
