Update conclusion based on feedback

--- a/CSConclusion.tex
+++ b/CSConclusion.tex
@@ -55,4 +55,8 @@ moving files between areas of a system's filesystem.  The low overhead
 introduced by CrashSimulator's technique meant that it was able to
 find these bugs quickly in spite of its unoptimized implementation.
 
-Future work will include expanding the repository of anomalies and their checkers, as well as exploring opportunities to further automate the discovery of anomalies and checkers.
+Future work will include expanding the repository of anomalies and their
+checkers, as well as exploring opportunities to further automate the discovery
+of anomalies and checkers.  In the long term, we envision a public repository of
+anomalies along with CrashSimulator test patterns that can be applied to new or
+existing applications.
